--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,18 @@
   margin-top: 2rem;
 }
 
+.ricomida{
+  font-family: 'Lobster', cursive;
+}
+
+.piericomida{
+  font-family: 'Lobster', cursive;
+  font-size: 3rem;
+  color: white;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 h1{
   text-transform: uppercase;
 }
@@ -22,4 +34,10 @@ hr{
 .carrusel{
   margin-top: 2rem;
   margin-bottom: 2rem;
+}
+
+.suscripcion{
+  color: white;
+  padding-top:7rem;
+  padding-bottom:10rem;
 }
